--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
+bee2 (1.5.1) UNRELEASED; urgency=medium
+
+  * Check release 
+
+ -- root <root@localhost.localdomain>  Thu, 17 May 2018 20:03:00 +0300
+
 bee2 (1.0.0) unstable; urgency=medium
 
   * Initial Release.
-
- -- root <root@localhost.localdomain>  Thu, 17 May 2018 03:27:53 +0300
-
- bee2 (1.1.0) unstable; urgency=medium
-
-  * Check release.
 
  -- root <root@localhost.localdomain>  Thu, 17 May 2018 03:27:53 +0300
