--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,14 @@
+bee2 (1.7.0) UNRELEASED; urgency=medium
+
+  * Small refactoring
+  * Added user_id
+  * Do exit if smth wrong with required parameters or with state file
+
+ -- Maria Chmyreva <maria.chmyreva@gmail.com>  Sun, 20 May 2018 02:46:41 +0300
+
 bee2 (1.6.5) UNRELEASED; urgency=medium
 
-  * Smth 
+  * Smth
   * Removed some option files
 
  -- root <root@localhost.localdomain>  Sat, 19 May 2018 01:28:56 +0300
