--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+bee2 (1.7.2) UNRELEASED; urgency=medium
+
+  * Small refactoring
+  * Fix crash of program in windows on Bob's second step
+
+ -- Maria Chmyreva <maria.chmyreva@gmail.com>  Sun, 3 June 2018 01:44:00 +0300
+
 bee2 (1.7.1) UNRELEASED; urgency=medium
 
   * Remove useless package
@@ -17,10 +24,10 @@ bee2 (1.6.5) UNRELEASED; urgency=medium
   * Smth
   * Removed some option files
 
- -- root <root@localhost.localdomain>  Sat, 19 May 2018 01:28:56 +0300
+ -- Maria Chmyreva <maria.chmyreva@gmail.com>  Sat, 19 May 2018 01:28:56 +0300
 
 bee2 (1.0.0) unstable; urgency=medium
 
   * Initial Release.
 
- -- root <root@localhost.localdomain>  Thu, 17 May 2018 03:27:53 +0300
+ -- Maria Chmyreva <maria.chmyreva@gmail.com>  Thu, 17 May 2018 03:27:53 +0300
